--- a/Assignmnet2.ipynb
+++ b/Assignmnet2.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "886a6479",
    "metadata": {},
    "outputs": [
@@ -704,6 +704,28 @@
     "- **Rationale:** 1. A higher **$\\alpha$ (0.2)** facilitates rapid learning in a discrete state space where transitions are deterministic.\n",
     "    2. A lower **$\\epsilon$ (0.1)** ensures that the agent focuses on exploitation once a successful trajectory is found, avoiding the penalties associated with unnecessary random moves.\n",
     "- **Final Result:** The re-trained agent with optimized parameters exhibits the lowest average steps and the fastest convergence rate, effectively solving the Taxi-v3 problem within the resource constraints."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e60b2ae",
+   "metadata": {},
+   "source": [
+    "### 💡 Discussion & Talking Points\n",
+    "\n",
+    "To further reflect on the performance of the Q-Learning agent in the Taxi-v3 environment, the following three points serve as critical areas for technical discussion:\n",
+    "\n",
+    "#### 1. The Relationship Between Learning Rate ($\\alpha$) and Environmental Determinism\n",
+    "- **Point:** In this experiment, we observed that a relatively high learning rate ($\\alpha = 0.2$) outperformed smaller values. \n",
+    "- **Discussion:** In the Taxi-v3 environment, transitions are deterministic (actions lead to predictable next states). In such \"stationary\" environments, a higher $\\alpha$ allows the agent to update its Q-values aggressively without the risk of noise-induced instability. If the environment were stochastic (e.g., the taxi occasionally moves in a random direction due to \"slippery roads\"), would a smaller $\\alpha$ be safer to ensure stable convergence?\n",
+    "\n",
+    "#### 2. The \"Exploration Penalty\" in Discrete State Spaces\n",
+    "- **Point:** Higher exploration factors ($\\epsilon = 0.3$) consistently led to lower average returns even after thousands of episodes.\n",
+    "- **Discussion:** This highlights the \"Exploration-Exploitation Trade-off.\" While exploration is vital during the initial phase to discover the +20 reward, a fixed $\\epsilon$ becomes a performance bottleneck once the optimal path is known. To achieve a \"perfect\" agent, should we implement **Epsilon Decay** (starting high and gradually decreasing)? This would allow for robust early discovery and precise late-stage execution.\n",
+    "\n",
+    "#### 3. Scalability and the Transition to Deep RL\n",
+    "- **Point:** We successfully mapped 500 discrete states into a tabular Q-table.\n",
+    "- **Discussion:** While tabular Q-learning is efficient here, consider a real-world autonomous taxi scenario with continuous GPS coordinates and dynamic traffic. The state space would become infinite, making a Q-table impossible to maintain. This transition from **Tabular Q-Learning** to **Deep Q-Networks (DQN)**—where a neural network approximates the Q-values—is the logical next step for scaling reinforcement learning to complex, high-dimensional problems."
    ]
   }
  ],
